VCU-96: Use of SharedSecrets compatible with Java 8, 9 and 10.
Temporary change to load SharedSecrets via Reflection.
Allows compilation and execution on Java 8, 9 and 10.
To be removed on final upgrade to Java 10.

Co-authored-by:  Alan Carter <alan.carter@digital.cabinet-office.gov.uk>, javindo <steve.butler@digital.cabinet-office.gov.uk>